docs: fix spacing of page headers

--- a/doc-src/02-docstyle.css
+++ b/doc-src/02-docstyle.css
@@ -14,3 +14,7 @@ body {
 h1 {
     line-height: 1.1;
 }
+
+.page-header {
+    margin: 0px 0 22px;
+}
